--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-ytdl": "^4.8.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "ytdl-core": "^4.11.5"
+    "youtube-exec": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
