--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "youtube-exec": "^1.0.4"
+    "youtube-exec": "^1.0.4",
+    "ytdl-core": "^4.11.5"
   },
   "scripts": {
     "start": "react-scripts start",
